--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-<p>first</p>
+<!DOCTYPE>
+<html>
+
+<head>
+  <title>Learn Enough HTML to Be Dangerous</title>
+  <meta  charset="utf-8">
+</head>
+
+<body>
+  <p>first -> second</p>
+</body>
+
+</html>
